--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,3 +11,16 @@ a{
   color: Aquamarine;
   font-size: 16px;
 }
+h1,h2{
+  color: White;
+}
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+p{
+  color: gray;
+}
+.content p{
+  font-size: 21px;
+}
